@@ -15,6 +15,13 @@ from Products.CMFCore.utils import getToolByName
 if utool is None:
     utool = getToolByName(context, 'portal_url')
 
-base_url = utool.getBaseUrl()
+if hasattr(utool.aq_inner.aq_explicit, 'getBaseUrl'):
+    base_url = utool.getBaseUrl()
+else:
+    # backward compatibility
+    portal = utool.getPortalObject()
+    base_url = portal.absolute_url_path()
+    if not base_url.endswith('/'):
+        base_url += '/'
 
 return base_url
