@@ -58,6 +58,8 @@ Bug fixes:
   url, and get its breadcrumbs without objects hidden with the virtual
   hosting. Work to incorrect code in a virtual hosting environment is still in
   progress.
+- fix #846: Added backward compatibility code to make the getBaseUrl script
+  work as expected just before the portal_url update.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in the installer.
